k8s/learn-helper/learn-helper.service.yml
apiVersion: v1
kind: Service
metadata:
  name: learn-helper
  namespace: learn-helper
spec:
  selector:
    app: learn-helper
  ports:
    - name: http
      port: 3000
      targetPort: http
